--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
+    "hostile": "~1.3.1",
     "lolex": "^2.6.0",
-    "tap": "^11.1.5"
+    "tap": "^12.0.1"
   }
 }
