--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "bench": "node benchmark/cache.js",
-    "test": "tap test/*.js",
+    "test": "tape test/*.js | tap-dot",
     "test:coverage": "tap test/*.js --cov",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.12.0",
     "hostile": "~1.3.2",
     "lolex": "^2.7.0",
-    "tap": "^12.0.1"
+    "tap-dot": "^2.0.0",
+    "tape": "^4.9.1"
   }
 }
