--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,33 @@ language: node_js
 
 node_js:
   - '10'
+  - '9'
 
 script:
   - sudo env "PATH=$PATH" npm test
 
 sudo: enabled
+
+jobs:
+  fast_finish: true
+
+  include:
+
+    # Nightlies
+    - stage: Node.js pre-releases
+      node_js: '11'
+      if: type = cron
+      env: NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly/
+    -
+      node_js: '10'
+      if: type = cron
+      env: NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly/
+
+    # Release Candidates
+    -
+      node_js: '10'
+      if: type = cron
+      env: NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/rc/
 
 notifications:
   email:
