--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "circuit-b",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "A non intrusive circuit breaker",
   "main": "lib/main.js",
   "directories": {
