--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.12.0",
     "hostile": "~1.3.2",
+    "request": "^2.88.0",
     "tap-summary": "^4.0.0",
     "tape": "^4.9.1"
   },
