--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "scripts": {
     "test": "tape test/*.js | tap-summary",
+    "test:fetch": "tape test/fetch.js | tap-summary",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -35,6 +36,7 @@
     "eslint-plugin-import": "^2.12.0",
     "hostile": "~1.3.2",
     "request": "^2.88.0",
+    "node-fetch": "^2.2.0",
     "tap-summary": "^4.0.0",
     "tape": "^4.9.1"
   },
