--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "test": "tape test/*.js | tap-summary",
-    "test:fetch": "tape test/fetch.js | tap-summary",
+    "test:fetch": "tape test/integration-fetch.js | tap-summary",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
