--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   ],
   "scripts": {
     "test": "tape test/*.js | tap-summary",
+    "test:metrics": "tape test/integration-metrics.js | tap-summary",
+    "test:request": "tape test/integration-request.js | tap-summary",
     "test:fetch": "tape test/integration-fetch.js | tap-summary",
+    "test:http": "tape test/integration-http.js | tap-summary",
+    "test:breaker": "tape test/breaker.js | tap-summary",
+    "test:main": "tape test/main.js | tap-summary",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
