--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:fetch": "tape test/integration-fetch.js | tap-summary",
     "test:axios": "tape test/integration-axios.js | tap-summary",
     "test:http": "tape test/integration-http.js | tap-summary",
+    "test:got": "tape test/integration-got.js | tap-summary",
     "test:breaker": "tape test/breaker.js | tap-summary",
     "test:main": "tape test/main.js | tap-summary",
     "lint": "eslint .",
@@ -44,6 +45,7 @@
     "request": "^2.88.0",
     "axios": "^0.18.0",
     "node-fetch": "^2.2.0",
+    "got": "^9.2.2",
     "synclog": "^1.0.1",
     "tap-summary": "^4.0.0",
     "tape": "^4.9.1"
