--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test:got": "tape test/integration-got.js | tap-summary",
     "test:response": "tape test/response.js | tap-summary",
     "test:breaker": "tape test/breaker.js | tap-summary",
+    "test:utils": "tape test/utils.js | tap-summary",
     "test:main": "tape test/main.js | tap-summary",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
