--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
-    "hostile": "~1.3.2",
+    "hostile": "^1.3.2",
     "request": "^2.88.0",
     "axios": "^0.18.0",
     "node-fetch": "^2.5.0",
