--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "test:breaker": "tape test/breaker.js | tap-summary",
     "test:utils": "tape test/utils.js | tap-summary",
     "test:main": "tape test/main.js | tap-summary",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint test/* lib/*",
+    "lint:fix": "eslint test/* lib/* --fix"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
