--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,10 @@
 {
-    "env": {
-        "es6": true,
-        "node": true
-    },
-    "extends": "airbnb-base",
-    "rules": {
-        "strict": [0, "global"],
-        "indent": [1, 4],
-        "class-methods-use-this": [0]
-    }
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "strict": [0, "global"],
+    "class-methods-use-this": [0],
+    "no-underscore-dangle": [0],
+    "no-restricted-syntax": [0]
+  }
 }
