--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "strict": [0, "global"],
     "class-methods-use-this": [0],
     "no-underscore-dangle": [0],
-    "no-restricted-syntax": [0]
+    "no-restricted-syntax": [0],
+    "no-console": [0]
   }
 }
