Move host altering to before and after test events

--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "scalability"
   ],
   "scripts": {
-    "test": "tap test/*.js",
-    "test:metrics": "tap test/integration-metrics.js",
-    "test:request": "tap test/integration-request.js",
-    "test:fetch": "tap test/integration-fetch.js",
-    "test:axios": "tap test/integration-axios.js",
-    "test:http": "tap test/integration-http.js",
-    "test:got": "tap test/integration-got.js",
-    "test:response": "tap test/response.js",
+    "test": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/*.js",
+    "test:metrics": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/integration-metrics.js",
+    "test:request": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/integration-request.js",
+    "test:fetch": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/integration-fetch.js",
+    "test:axios": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/integration-axios.js",
+    "test:http": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/integration-http.js",
+    "test:got": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/integration-got.js",
+    "test:response": "tap --before=utils/before-tests.js --after=utils/after-tests.js test/response.js",
     "test:breaker": "tap test/breaker.js",
     "test:utils": "tap test/utils.js",
     "test:main": "tap test/main.js",
